# labs-codesearch

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitreview  Cargo.toml  README  README.md  app.py  crontab.legoktm  enable.sh  hound-core.service  hound-extensions.service  hound-ooui.service  hound-operations.service  hound-search.service  hound-skins.service  hound-things.service  hound_proxy.service  manage.sh  ports.py  requirements.txt  start.sh  test_app.py  test_write_config.py  tox.ini  wait.py  write_config.py
.pipeline/: blubber.yaml  config.yaml
frontend/: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .htaccess  .phpcs.xml  Cargo.toml  Dockerfile  Makefile.toml  README.md  composer.json  index.html  index.php  nginx.conf  package.json  robots.txt
frontend/.phan/: config.php
frontend/.phan/internal_stubs/: mustache.phan_php
frontend/src/: ApiUnavailable.php  Codesearch.php  CodesearchDebug.php  Model.php  Response.php  View.php  codesearch.rs  dev-router.php  lib.rs  view.rs
frontend/static/: codesearch.js  libup.sh  opensearch.xml  styles.css  util.js  view.js
frontend/static/lib/codex-design-tokens-2.5.1/: theme-wikimedia-ui-mode-dark.css  theme-wikimedia-ui-root.css
frontend/static/lib/htm-3.1.1-mini/: NOTICE  index.mjs
frontend/templates/: error.mustache  excludes.mustache  health.mustache  index.mustache  more.mustache  partial_resultcard.mustache  repos.mustache
images/: Dockerfile
templates/: health.html  open_search.xml
