[package]
version = "0.1.0"
name = "codesearch-frontend"
authors = ["Kunal Mehta <legoktm@member.fsf.org>"]
description = "Frontend for MediaWiki code search"
license = "GPL-3.0-or-later"
readme = "../README"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# This commit points to Seed 0.7.0 with important fixes.
# Replace with `seed = "0.8.0"` (or newer) once released.
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
anyhow = "1.0.31"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.10.7", features = ["json"]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
